--- a/apps/web/src/shells/components/AppHeader.module.css
+++ b/apps/web/src/shells/components/AppHeader.module.css
@@ -76,7 +76,7 @@
   line-height: var(--ss-leading-compact);
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 768px) {
   .header {
     grid-template-columns: 1fr;
     grid-template-areas:
@@ -88,5 +88,6 @@
   .actions {
     justify-self: stretch;
     justify-content: flex-start;
+    min-width: 0;
   }
 }
